--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-styled-components": "^3.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
