--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-emotion": "^5.2.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-styled-components": "^3.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.0.8"
   }
 }
